# mask-free-segmentation

./: .gitignore  grade3.ipynb  main.ipynb  my.ipynb  pyproject.toml
assets/: kaggle-snippet.txt
segmentation/: loader.py  loss.py  model.py  utils.py
segmentation/model/: __init__.py
segmentation/model/analysis/: __init__.py  base.py  captum.py  torchcam.py
segmentation/model/backbone/: __init__.py  base.py  densenet.py  efficientnet.py  resnet.py
