[project]
name = "segmentation"
version = "0.0.1"
dependencies = [
    "captum",
    "efficientnet_pytorch",
    "numpy",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "torch",
    "torchcam",
    "torchvision",
    "tqdm",
]

[project.optional-dependencies]
jupyterlab = [
    "jupyterlab"
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["segmentation"]

[tool.ruff]
preview = true
line-length = 79

[tool.ruff.lint]
select = [
    "ANN001",   # Missing type annotation for function argument
    "ANN2",     # Missing return type annotation
    "DOC",      # Pydoclint
    "D",        # Pydocstyle
    "E",        # Pycodestyle
    "F",        # Pyflakes
    "I",        # Isort
    "Q",        # Quotes
]

ignore = [
    "D1",       # Missing docstrings
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
arg-type-hints-in-signature = true
